# linear_regressions

./: Linear Regression - Sheet1 (1).csv:Zone.Identifier  README.md  data.csv:Zone.Identifier  pyproject.toml  regression.ipynb
