[tool.poetry]
name = "linear-regression"
version = "0.1.0"
description = ""
authors = ["belelelolahi <belalelolahi003@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.2.3"
matplotlib = "^3.5.0"
scikit-learn = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
